--- a/guidelines.html
+++ b/guidelines.html
@@ -184,7 +184,7 @@
 										<li>It is not under consideration elsewhere</li>
 										<li>All authors have approved the submission</li>
 										<li>Required ethical approvals have been obtained</li>
-										<li>Authors accept our <a href="/policies" class="link-primary">editorial policies</a></li>
+										<li>Authors accept our <a href="/review" class="link-primary">editorial policies</a></li>
 									</ol>
 									<p class="mb-0"><em>For technical issues with submission, contact: <a href="mailto:submission@solav.me">submission@solav.me</a></em></p>
 								</div>
