--- a/a/s2025781107.html
+++ b/a/s2025781107.html
@@ -120,6 +120,13 @@
 		<link href="/css/swiper.css" rel="stylesheet">
 		<link href="/css/style.css" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-RE3FS524EK"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+		gtag('config', 'G-RE3FS524EK');
+		</script>
 		<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 		<meta http-equiv="Pragma" content="no-cache">
 		<meta http-equiv="Expires" content="0">
