--- a/accessibility.html
+++ b/accessibility.html
@@ -28,6 +28,13 @@
 		<link href="/css/swiper.css" rel="stylesheet">
 		<link href="/css/style.css" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-RE3FS524EK"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+		gtag('config', 'G-RE3FS524EK');
+		</script>
 	</head>
 		<main class="page-wrapper">
 			<header class="header navbar navbar-expand-lg bg-light navbar-sticky py-0">
