--- a/submit.html
+++ b/submit.html
@@ -314,6 +314,7 @@
 							SOLAV Journal is an open access, peer-reviewed journal publishing interdisciplinary applied research with real-world impact.
 							<br><span class="font-sm"><strong>Publication Frequency:</strong> Continuous publication.</span>
 							<br><span class="font-sm"><strong>Editor-In-Chief:</strong> Maher Asaad Baker</span>
+							<br><span class="font-sm"><strong>Publisher:</strong> Leothar Company, Riyadh, Saudi Arabia</span>
 						</p>
 						<div class="issn-container">
 							<img src="/images/issn_logo.svg" alt="ISSN" class="issn-logo">
