--- a/a/s2025781102.html
+++ b/a/s2025781102.html
@@ -14,7 +14,7 @@
 		<meta name="citation_journal_abbrev" content="SOLAV J."/>
 		<meta name="citation_issn" content=""/>
 		<meta name="citation_author" content="Baker, Maher Asaad"/>
-		<meta name="citation_author_institution" content="SOLAV, Damascus, Syria"/>
+		<meta name="citation_author_institution" content="SOLAV, Riyadh, Saudi Arabia"/>
 		<meta name="citation_language" content="en"/>
 		<meta name="citation_publication_date" content="2025-02-04"/>
 		<meta name="citation_volume" content="1"/>
@@ -201,7 +201,7 @@
 							<div class="author-affiliation mb-3">
 															
 								<span class="mb-0 small">*1</span>
-								<span class="mb-0 mx-2"><i class="bi bi-building me-1"></i> SOLAV, Damascus, Syria</span>
+								<span class="mb-0 mx-2"><i class="bi bi-building me-1"></i> SOLAV, Riyadh, Saudi Arabia</span>
 								
 								<span class="mb-0 mx-2 font-sm">
 									<i class="bi bi-envelope me-1"></i> <a href="mailto:maher@solav.me">maher@solav.me</a>
@@ -299,6 +299,7 @@
 							SOLAV Journal is an open access, peer-reviewed journal publishing interdisciplinary applied research with real-world impact.
 							<br><span class="font-sm"><strong>Publication Frequency:</strong> Continuous publication.</span>
 							<br><span class="font-sm"><strong>Editor-In-Chief:</strong> Maher Asaad Baker</span>
+							<br><span class="font-sm"><strong>Publisher:</strong> Leothar Company, Riyadh, Saudi Arabia</span>
 						</p>
 						<div class="issn-container">
 							<img src="/images/issn_logo.svg" alt="ISSN" class="issn-logo">
