--- a/guidelines.html
+++ b/guidelines.html
@@ -558,6 +558,7 @@ Virtanen, P., et al. (2020). SciPy 1.0: Fundamental algorithms for scientific co
 							SOLAV Journal is an open access, peer-reviewed journal publishing interdisciplinary applied research with real-world impact.
 							<br><span class="font-sm"><strong>Publication Frequency:</strong> Continuous publication.</span>
 							<br><span class="font-sm"><strong>Editor-In-Chief:</strong> Maher Asaad Baker</span>
+							<br><span class="font-sm"><strong>Publisher:</strong> Leothar Company, Riyadh, Saudi Arabia</span>
 						</p>
 						<div class="issn-container">
 							<img src="/images/issn_logo.svg" alt="ISSN" class="issn-logo">
