--- a/apc.html
+++ b/apc.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="author" content="SOLAV Journal">
-		<meta name="publisher" content="SOLAV">
+		<meta name="publisher" content="Leothar Company">
 		<meta name="copyright" content="Creative Commons Attribution License (CC BY 4.0)">
 		<meta name="language" content="en, ar">
 		<meta name="robots" content="index, follow">
