--- a/a/s2025781107.html
+++ b/a/s2025781107.html
@@ -335,13 +335,13 @@
 			<div class="container py-5">
 				<div class="row g-4">
 					<div class="col-lg-4">
-						<p class="mb-3">
+						<p class="mb-1">
 							SOLAV Journal is an open access, peer-reviewed journal publishing interdisciplinary applied research with real-world impact.
 							<br><span class="font-sm"><strong>Publication Frequency:</strong> Continuous publication.</span>
 							<br><span class="font-sm"><strong>Editor-In-Chief:</strong> Maher Asaad Baker</span>
 							<br><span class="font-sm"><strong>Publisher:</strong> Leothar Company, Riyadh, Saudi Arabia</span>
 						</p>
-						<div class="issn-container">
+						<div class="issn-container mt-0">
 							<img src="/images/issn_logo.svg" alt="ISSN" class="issn-logo">
 							<span class="issn-text">ISSN request pending</span>
 						</div>
