--- a/a/s2025781112.html
+++ b/a/s2025781112.html
@@ -214,7 +214,7 @@
 			</header>
 			<div class="jarallax mb-lg-5 mb-4 pt-0 card border-0 bg-gradient-primary rounded-0" data-jarallax="" data-speed="0.35" style="height: 1vw; min-height: 10px; background-image: url(/images/main-bg.png);">
 				<div id="jarallax-container-0" class="jarallax-container">
-					<div class="jarallax-img" style="background-image: url(/images/main-bg.png);">
+					<div class="jarallax-img w-100" style="background-image: url(/images/main-bg.png);">
 					</div>
 				</div>
 			</div>
