--- a/track.html
+++ b/track.html
@@ -102,7 +102,7 @@
 
 			<div class="jarallax mb-lg-5 mb-4 pt-0 card border-0 bg-gradient-primary rounded-0" data-jarallax="" data-speed="0.35" style="height: 16vw; min-height: 200px; background-image: url(/images/main-bg.png);">
 				<div id="jarallax-container-0" class="jarallax-container">
-					<div class="jarallax-img" style="background-image: url(/images/main-bg.png);">
+					<div class="jarallax-img w-100" style="background-image: url(/images/main-bg.png);">
 						<div class="position-absolute top-sm-35 start-50 translate-middle centered-text w-100">
 							<h1 class="fw-bold centered-text">Track Your Paper</h1>
 							<p class="text-center text-white mb-0">Monitor the status of your submissions</p>
