--- a/open-submission.html
+++ b/open-submission.html
@@ -102,7 +102,7 @@
 
 			<div class="jarallax mb-lg-5 mb-4 pt-0 card border-0 bg-gradient-primary rounded-0" data-jarallax data-speed="0.35" style="height: 16vw; min-height: 200px; background-image: url(/images/main-bg.png);">
 				<div class="jarallax-container" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; z-index: -100;">
-					<div class="jarallax-img" style="background-image: url(/images/main-bg.png);">
+					<div class="jarallax-img w-100" style="background-image: url(/images/main-bg.png);">
 						<div class="position-absolute top-sm-35 start-50 translate-middle centered-text w-100">
 							<h1 class="fw-bold centered-text">Open Submission Policy</h1>
 							<h2 class="fs-6 centered-text small px-3">Embracing Diversity in Scholarly Contribution</h2>
