--- a/submit.html
+++ b/submit.html
@@ -102,7 +102,7 @@
 
 			<div class="jarallax mb-lg-5 mb-4 pt-0 card border-0 bg-gradient-primary rounded-0" data-jarallax="" data-speed="0.35" style="height: 16vw; min-height: 200px; background-image: url(/images/main-bg.png);" data-jarallax-original-styles="height: 16vw; min-height: 200px;">
 				<div id="jarallax-container-0" class="jarallax-container" style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; overflow: hidden; z-index: -100; clip-path: polygon(0px 0px, 100% 0px, 100% 100%, 0px 100%);">
-					<div class="jarallax-img" style="background-image: url(/images/main-bg.png); object-fit: cover; object-position: 50% 50%; max-width: none; position: fixed; top: 0px; left: 0px; width: 375.2px; height: 538.55px; overflow: hidden; pointer-events: none; transform-style: preserve-3d; backface-visibility: hidden; margin-top: 64.225px; transform: translate3d(0px, -40.425px, 0px);" data-jarallax-original-styles="background-image: url(./imgs/top-bg.jpg);">
+					<div class="jarallax-img w-100" style="background-image: url(/images/main-bg.png); object-fit: cover; object-position: 50% 50%; max-width: none; position: fixed; top: 0px; left: 0px; width: 375.2px; height: 538.55px; overflow: hidden; pointer-events: none; transform-style: preserve-3d; backface-visibility: hidden; margin-top: 64.225px; transform: translate3d(0px, -40.425px, 0px);" data-jarallax-original-styles="background-image: url(./imgs/top-bg.jpg);">
 						<div class="position-absolute top-sm-35 start-50 translate-middle centered-text w-100">
 							<h1 class="fw-bold centered-text">Submit Your Manuscript</h1>
 							<h2 class="fs-6 centered-text small px-3">Follow the steps below to submit your research for peer review</h2>
