--- a/about.html
+++ b/about.html
@@ -487,7 +487,10 @@
 					</div>
 					
 
-					<div class="card border-primary shadow-sm px-4 px-lg-0 mt-5 mb-5">
+					<div class="card border-primary shadow-sm px-4 px-lg-0 mt-5 mb-5" id="editorialBoard">
+						<div class="text-center mb-0 mt-2">
+							<h2 class="h1 mb-2">Editorial Board</h2>
+						</div>
 						<div class="row align-items-center">
 							<div class="col-md-3">
 								<img src="/images/editors.svg" alt="Editorial Board">
@@ -500,6 +503,7 @@
 									</div>
 									<div class="col-md-7">
 										Maher Asaad Baker
+										<br><span class="text-muted font-sm">Independent Researcher, Damascus, Sryia</span>
 									</div>
 								</div>
 								<div class="border-bottom row mb-2">
@@ -508,6 +512,7 @@
 									</div>
 									<div class="col-md-7">
 										Fadi Al-Wishahi
+										<br><span class="text-muted font-sm">Independent Researcher, Riyadh, Saudi Arabia</span>
 									</div>
 								</div>
 								<div class="border-bottom row mb-2">
@@ -515,11 +520,16 @@
 										Editorial Board Members
 									</div>
 									<div class="col-md-7">
-										<span>&#8226;</span> Khalil Rizq
-										<br><span>&#8226;</span> Akram Abdulhafiz Al Sawadi
-										<br><span>&#8226;</span> Yousef Abdullah
-										<br><span>&#8226;</span> Fuad Al-Qrize
-										<br><span>&#8226;</span> Obada Baker
+										<span class="text-primary">●</span> Khalil Rizq
+										<br>&emsp;<span class="text-muted font-sm">Independent Scholar, Riyadh, Saudi Arabia</span>
+										<br><span class="text-primary">●</span> Akram Abdulhafiz Al Sawadi
+										<br>&emsp;<span class="text-muted font-sm">Independent Scholar, Damascus, Sryia</span>
+										<br><span class="text-primary">●</span> Yousef Abdullah
+										<br>&emsp;<span class="text-muted font-sm">Research Consultant, Riyadh, Saudi Arabia</span>
+										<br><span class="text-primary">●</span> Fuad Al-Qrize
+										<br>&emsp;<span class="text-muted font-sm">Independent Researcher, Ibb, Yemen</span>
+										<br><span class="text-primary">●</span> Obada Baker
+										<br>&emsp;<span class="text-muted font-sm">Research Consultant, Damascus, Sryia</span>
 									</div>
 								</div>
 
