--- a/aims-scope.html
+++ b/aims-scope.html
@@ -83,8 +83,12 @@
 										<li><a href="/oai-pmh" class="dropdown-item">OAI-PMH Repository</a></li>
 									</ul>
 								</li>
-								<li class="nav-item">
-									<a href="/about" class="nav-link">About</a>
+								<li class="nav-item dropdown">
+									<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-current="page">About</a>
+									<ul class="dropdown-menu">
+										<li><a href="/about" class="dropdown-item">About the journal</a></li>
+										<li><a href="/about#editorialBoard" class="dropdown-item"><i class="bi bi-arrow-return-right"></i> Editorial Board</a></li>
+									</ul>
 								</li>
 							</ul>
 						</div>  
