--- a/accessibility.html
+++ b/accessibility.html
@@ -246,7 +246,7 @@
 								<a href="https://bsky.app/profile/solav.me" alt="Bluesky">
 									<img src="/images/bluesky-icon.svg" class="d-Icons" alt="Bluesky"></a>
 								<a rel="me" href="https://mastodon.social/@SOLAVjournal" alt="Mastodon">
-									<img src="/images/mastodon-icon.svg" class="d-Icons" alt="Mastodon"></a>
+									<img src="/images/mastodon-icon.svg" class="d-IconsL m-0" alt="Mastodon"></a>
 							</div>
 							<ul class="list-inline col-12 p-0 m-0">
 								<li class="list-inline-item p-0 m-0"><a href="/privacy" class="link-primary link-underline-opacity-25 link-underline-opacity-100-hover link-offset-2">Privacy Policy</a><span class="text-primary p-0 m-0 px-2">●</span></li>
