--- a/oai-pmh.html
+++ b/oai-pmh.html
@@ -96,7 +96,7 @@
 					</div>
 					<div class="form-check form-switch mode-switch pe-lg-1 ms-auto me-4" data-bs-toggle="mode">
 						<input type="checkbox" class="form-check-input" id="theme-mode">
-						<label class="form-check-label" for="theme-mode"><i class="bi bi-sun"></i></span></label>
+						<label class="form-check-label" for="theme-mode"><i class="bi bi-sun"></i></label>
 						<label class="form-check-label" for="theme-mode"><i class="bi bi-moon-stars"></i></label>
 					</div>
 					<button type="button" class="navbar-toggler" data-bs-toggle="offcanvas" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -312,25 +312,26 @@
 											<p>The primary metadata format, implementing the <strong>Dublin Core Metadata Element Set, Version 1.1</strong> as specified in the OAI-PMH protocol.</p>
 											
 											<h5 class="mt-4 mb-3">Schema Information:</h5>
-											<table class="table table-bordered">
-												<tr>
-													<th>Metadata Prefix</th>
-													<td><code>oai_dc</code></td>
-												</tr>
-												<tr>
-													<th>XML Schema</th>
-													<td><code>http://www.openarchives.org/OAI/2.0/oai_dc.xsd</code></td>
-												</tr>
-												<tr>
-													<th>Namespace</th>
-													<td><code>http://www.openarchives.org/OAI/2.0/oai_dc/</code></td>
-												</tr>
-												<tr>
-													<th>Dublin Core Elements Used</th>
-													<td>15 mandatory and optional elements as per DCMES</td>
-												</tr>
-											</table>
-											
+											<div class="table-responsive">
+												<table class="table table-bordered">
+													<tr>
+														<th>Metadata Prefix</th>
+														<td><code>oai_dc</code></td>
+													</tr>
+													<tr>
+														<th>XML Schema</th>
+														<td><code>http://www.openarchives.org/OAI/2.0/oai_dc.xsd</code></td>
+													</tr>
+													<tr>
+														<th>Namespace</th>
+														<td><code>http://www.openarchives.org/OAI/2.0/oai_dc/</code></td>
+													</tr>
+													<tr>
+														<th>Dublin Core Elements Used</th>
+														<td>15 mandatory and optional elements as per DCMES</td>
+													</tr>
+												</table>
+											</div>
 											<h5 class="mt-4 mb-3">Dublin Core Mapping:</h5>
 											<div class="row g-3">
 												<div class="col-md-6">
