--- a/guidelines.html
+++ b/guidelines.html
@@ -103,7 +103,7 @@
 					</div>
 					<div class="form-check form-switch mode-switch pe-lg-1 ms-auto me-4" data-bs-toggle="mode">
 						<input type="checkbox" class="form-check-input" id="theme-mode">
-						<label class="form-check-label" for="theme-mode"><i class="bi bi-sun"></i></span></label>
+						<label class="form-check-label" for="theme-mode"><i class="bi bi-sun"></i></label>
 						<label class="form-check-label" for="theme-mode"><i class="bi bi-moon-stars"></i></label>
 					</div>
 					<button type="button" class="navbar-toggler" data-bs-toggle="offcanvas" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
