--- a/a/s2025781102.html
+++ b/a/s2025781102.html
@@ -149,12 +149,12 @@
 									<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-current="page">Policies</a>
 									<ul class="dropdown-menu">
 										<li><a href="/ethics" class="dropdown-item">Publication Ethics</a></li>
+										<li><a href="/ai" class="dropdown-item">AI in Research Policy</a></li>
 										<li><a href="/apc" class="dropdown-item">Article Processing Charges</a></li>
 										<li><a href="/review" class="dropdown-item">Peer Review Process</a></li>
 										<li><a href="/open-submission" class="dropdown-item">Open Submission Policy</a></li>
 										<li><a href="/access" class="dropdown-item">Open Access & Licensing</a></li>
 										<li><a href="/archiving" class="dropdown-item">Archiving & Management</a></li>
-										<li><a href="/oai-pmh" class="dropdown-item">OAI-PMH Repository</a></li>
 									</ul>
 								</li>
 								<li class="nav-item dropdown">
@@ -162,6 +162,7 @@
 									<ul class="dropdown-menu">
 										<li><a href="/about" class="dropdown-item">About the journal</a></li>
 										<li><a href="/about#editorialBoard" class="dropdown-item"><i class="bi bi-arrow-return-right"></i> Editorial Board</a></li>
+										<li><a href="/oai-pmh" class="dropdown-item active">OAI-PMH Repository</a></li>
 									</ul>
 								</li>
 							</ul>
@@ -169,7 +170,7 @@
 					</div>
 					<div class="form-check form-switch mode-switch pe-lg-1 ms-auto me-4" data-bs-toggle="mode">
 						<input type="checkbox" class="form-check-input" id="theme-mode">
-						<label class="form-check-label" for="theme-mode"><i class="bi bi-sun"></i></span></label>
+						<label class="form-check-label" for="theme-mode"><i class="bi bi-sun"></i></label>
 						<label class="form-check-label" for="theme-mode"><i class="bi bi-moon-stars"></i></label>
 					</div>
 					<button type="button" class="navbar-toggler" data-bs-toggle="offcanvas" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
