--- a/about.html
+++ b/about.html
@@ -76,12 +76,12 @@
 									<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-current="page">Policies</a>
 									<ul class="dropdown-menu">
 										<li><a href="/ethics" class="dropdown-item">Publication Ethics</a></li>
+										<li><a href="/ai" class="dropdown-item">AI in Research Policy</a></li>
 										<li><a href="/apc" class="dropdown-item">Article Processing Charges</a></li>
 										<li><a href="/review" class="dropdown-item">Peer Review Process</a></li>
 										<li><a href="/open-submission" class="dropdown-item">Open Submission Policy</a></li>
 										<li><a href="/access" class="dropdown-item">Open Access & Licensing</a></li>
 										<li><a href="/archiving" class="dropdown-item">Archiving & Management</a></li>
-										<li><a href="/oai-pmh" class="dropdown-item">OAI-PMH Repository</a></li>
 									</ul>
 								</li>
 								<li class="nav-item dropdown">
@@ -89,6 +89,7 @@
 									<ul class="dropdown-menu">
 										<li><a href="/about" class="dropdown-item active">About the journal</a></li>
 										<li><a href="/about#editorialBoard" class="dropdown-item"><i class="bi bi-arrow-return-right"></i> Editorial Board</a></li>
+										<li><a href="/oai-pmh" class="dropdown-item active">OAI-PMH Repository</a></li>
 									</ul>
 								</li>
 							</ul>
@@ -299,7 +300,7 @@
 								<div class="col-md-6">
 									<div class="card h-100 bg-light shadow-sm border-0">
 										<div class="card-body p-4">
-											<div class="bg-primary bg-opacity-10 rounded-circle d-inline-flex justify-content-center align-items-center mb-3" style="width: 60px; height: 60px;">
+											<div class="bg-primary bg-opacity-10 rounded-circle d-inline-flex justify-content-center align-items-center mb-3" style="min-width: 60px; min-height: 60px;">
 												<i class="bi bi-lightbulb fs-4 text-primary"></i>
 											</div>
 											<h4 class="h5 mb-3">Innovation Through Integration</h4>
@@ -310,7 +311,7 @@
 								<div class="col-md-6">
 									<div class="card h-100 bg-light shadow-sm border-0">
 										<div class="card-body p-4">
-											<div class="bg-primary bg-opacity-10 rounded-circle d-inline-flex justify-content-center align-items-center mb-3" style="width: 60px; height: 60px;">
+											<div class="bg-primary bg-opacity-10 rounded-circle d-inline-flex justify-content-center align-items-center mb-3" style="min-width: 60px; min-height: 60px;">
 												<i class="bi bi-unlock fs-4 text-primary"></i>
 											</div>
 											<h4 class="h5 mb-3">Open Science Commitment</h4>
@@ -321,7 +322,7 @@
 								<div class="col-md-6">
 									<div class="card h-100 bg-light shadow-sm border-0">
 										<div class="card-body p-4">
-											<div class="bg-primary bg-opacity-10 rounded-circle d-inline-flex justify-content-center align-items-center mb-3" style="width: 60px; height: 60px;">
+											<div class="bg-primary bg-opacity-10 rounded-circle d-inline-flex justify-content-center align-items-center mb-3" style="min-width: 60px; min-height: 60px;">
 												<i class="bi bi-shield-check fs-4 text-primary"></i>
 											</div>
 											<h4 class="h5 mb-3">Ethical Excellence</h4>
@@ -332,7 +333,7 @@
 								<div class="col-md-6">
 									<div class="card h-100 bg-light shadow-sm border-0">
 										<div class="card-body p-4">
-											<div class="bg-primary bg-opacity-10 rounded-circle d-inline-flex justify-content-center align-items-center mb-3" style="width: 60px; height: 60px;">
+											<div class="bg-primary bg-opacity-10 rounded-circle d-inline-flex justify-content-center align-items-center mb-3" style="min-width: 60px; min-height: 60px;">
 												<i class="bi bi-globe fs-4 text-primary"></i>
 											</div>
 											<h4 class="h5 mb-3">Global Impact</h4>
@@ -612,7 +613,7 @@
 						<div class="col-md-4">
 							<div class="card border-0 shadow-sm h-100">
 								<div class="card-body p-4">
-									<div class="bg-primary bg-opacity-10 rounded-circle d-inline-flex justify-content-center align-items-center mb-3" style="width: 60px; height: 60px;">
+									<div class="bg-primary bg-opacity-10 rounded-circle d-inline-flex justify-content-center align-items-center mb-3" style="min-width: 60px; min-height: 60px;">
 										<i class="bi bi-envelope fs-4 text-primary"></i>
 									</div>
 									<h5 class="h6 mb-3">General Inquiries</h5>
@@ -623,7 +624,7 @@
 						<div class="col-md-4">
 							<div class="card border-0 shadow-sm h-100">
 								<div class="card-body p-4">
-									<div class="bg-primary bg-opacity-10 rounded-circle d-inline-flex justify-content-center align-items-center mb-3" style="width: 60px; height: 60px;">
+									<div class="bg-primary bg-opacity-10 rounded-circle d-inline-flex justify-content-center align-items-center mb-3" style="min-width: 60px; min-height: 60px;">
 										<i class="bi bi-question-circle fs-4 text-primary"></i>
 									</div>
 									<h5 class="h6 mb-3">Technical Support</h5>
@@ -634,7 +635,7 @@
 						<div class="col-md-4">
 							<div class="card border-0 shadow-sm h-100">
 								<div class="card-body p-4">
-									<div class="bg-primary bg-opacity-10 rounded-circle d-inline-flex justify-content-center align-items-center mb-3" style="width: 60px; height: 60px;">
+									<div class="bg-primary bg-opacity-10 rounded-circle d-inline-flex justify-content-center align-items-center mb-3" style="min-width: 60px; min-height: 60px;">
 										<i class="bi bi-heart-pulse fs-4 text-primary"></i>
 									</div>
 									<h5 class="h6 mb-3">Ethics Concerns</h5>
