--- a/archiving.html
+++ b/archiving.html
@@ -76,12 +76,12 @@
 									<a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" aria-current="page">Policies</a>
 									<ul class="dropdown-menu">
 										<li><a href="/ethics" class="dropdown-item">Publication Ethics</a></li>
+										<li><a href="/ai" class="dropdown-item">AI in Research Policy</a></li>
 										<li><a href="/apc" class="dropdown-item">Article Processing Charges</a></li>
 										<li><a href="/review" class="dropdown-item">Peer Review Process</a></li>
 										<li><a href="/open-submission" class="dropdown-item">Open Submission Policy</a></li>
 										<li><a href="/access" class="dropdown-item">Open Access & Licensing</a></li>
 										<li><a href="/archiving" class="dropdown-item active">Archiving & Management</a></li>
-										<li><a href="/oai-pmh" class="dropdown-item">OAI-PMH Repository</a></li>
 									</ul>
 								</li>
 								<li class="nav-item dropdown">
@@ -89,6 +89,7 @@
 									<ul class="dropdown-menu">
 										<li><a href="/about" class="dropdown-item">About the journal</a></li>
 										<li><a href="/about#editorialBoard" class="dropdown-item"><i class="bi bi-arrow-return-right"></i> Editorial Board</a></li>
+										<li><a href="/oai-pmh" class="dropdown-item active">OAI-PMH Repository</a></li>
 									</ul>
 								</li>
 							</ul>
@@ -128,6 +129,7 @@
 					<div class="section-nav pt-0 mt-0">
 						<h6 class="mb-3 fw-bold"><i class="bi bi-shield-check me-2"></i>Our Policies</h6>
 						<a href="/ethics" class="d-block mb-2 mobile-nav-link"><i class="bi bi-heart-pulse"></i> Publication Ethics</a>
+						<a href="/ai" class="d-block mb-2 mobile-nav-link"><i class="bi bi-cpu"></i> AI in Research Policy</a>
 						<a href="/apc" class="d-block mb-2 mobile-nav-link"><i class="bi bi-currency-exchange"></i> Article Processing Charges</a>
 						<a href="/review" class="d-block mb-2 mobile-nav-link"><i class="bi bi-people"></i> Peer Review Process</a>
 						<a href="/open-submission" class="d-block mb-2 mobile-nav-link"><i class="bi bi-door-open"></i> Open Submission Policy</a>
@@ -148,6 +150,7 @@
 						<div class="section-nav mb-4">
 							<h6 class="mb-3 fw-bold"><i class="bi bi-shield-check me-2"></i>Our Policies</h6>
 							<a href="/ethics"><i class="bi bi-heart-pulse"></i> Publication Ethics</a>
+							<a href="/ai"><i class="bi bi-cpu"></i> AI in Research Policy</a>
 							<a href="/apc"><i class="bi bi-currency-exchange"></i> Article Processing Charges</a>
 							<a href="/review"><i class="bi bi-people"></i> Peer Review Process</a>
 							<a href="/open-submission"><i class="bi bi-door-open"></i> Open Submission Policy</a>
@@ -286,7 +289,7 @@
 									<div class="row g-4">
 										<div class="col-md-6">
 											<div class="text-center p-3 border rounded-3 h-100">
-												<div class="bg-primary bg-opacity-10 rounded-circle d-inline-flex justify-content-center align-items-center mb-3" style="width: 60px; height: 60px;">
+												<div class="bg-primary bg-opacity-10 rounded-circle d-inline-flex justify-content-center align-items-center mb-3" style="min-width: 60px; min-height: 60px;">
 													<i class="bi bi-database fs-4 text-primary"></i>
 												</div>
 												<h4 class="h5">Data Hosting</h4>
@@ -295,7 +298,7 @@
 										</div>
 										<div class="col-md-6">
 											<div class="text-center p-3 border rounded-3 h-100">
-												<div class="bg-primary bg-opacity-10 rounded-circle d-inline-flex justify-content-center align-items-center mb-3" style="width: 60px; height: 60px;">
+												<div class="bg-primary bg-opacity-10 rounded-circle d-inline-flex justify-content-center align-items-center mb-3" style="min-width: 60px; min-height: 60px;">
 													<i class="bi bi-share fs-4 text-primary"></i>
 												</div>
 												<h4 class="h5">External Repositories</h4>
