--- a/guidelines.html
+++ b/guidelines.html
@@ -96,7 +96,7 @@
 									<ul class="dropdown-menu">
 										<li><a href="/about" class="dropdown-item">About the journal</a></li>
 										<li><a href="/about#editorialBoard" class="dropdown-item"><i class="bi bi-arrow-return-right"></i> Editorial Board</a></li>
-										<li><a href="/oai-pmh" class="dropdown-item active">OAI-PMH Repository</a></li>
+										<li><a href="/oai-pmh" class="dropdown-item">OAI-PMH Repository</a></li>
 									</ul>
 								</li>
 							</ul>
