--- a/oai-pmh.html
+++ b/oai-pmh.html
@@ -73,7 +73,7 @@
 									</ul>
 								</li>
 								<li class="nav-item dropdown">
-									<a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" aria-current="page">Policies</a>
+									<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-current="page">Policies</a>
 									<ul class="dropdown-menu">
 										<li><a href="/ethics" class="dropdown-item">Publication Ethics</a></li>
 										<li><a href="/ai" class="dropdown-item">AI in Research Policy</a></li>
@@ -85,7 +85,7 @@
 									</ul>
 								</li>
 								<li class="nav-item dropdown">
-									<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-current="page">About</a>
+									<a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" aria-current="page">About</a>
 									<ul class="dropdown-menu">
 										<li><a href="/about" class="dropdown-item">About the journal</a></li>
 										<li><a href="/about#editorialBoard" class="dropdown-item"><i class="bi bi-arrow-return-right"></i> Editorial Board</a></li>
@@ -129,7 +129,7 @@
 					<div class="section-nav pt-0 mt-0">
 						<a href="#introduction" class="d-block mb-2 mobile-nav-link"><i class="bi bi-info-circle"></i> Introduction</a>
 						<a href="#base-url" class="d-block mb-2 mobile-nav-link"><i class="bi bi-link"></i> Base URL & Access</a>
-						<a href="#protocol" class="d-block mb-2 mobile-nav-link"><i class="bi bi-cpu"></i> Protocol Implementation</a>
+						<a href="#protocol" class="d-block mb-2 mobile-nav-link"><i class="bi bi-database-fill-gear"></i> Protocol Implementation</a>
 						<a href="#metadata" class="d-block mb-2 mobile-nav-link"><i class="bi bi-database"></i> Metadata Formats</a>
 						<a href="#scope" class="d-block mb-2 mobile-nav-link"><i class="bi bi-collection"></i> Record Scope</a>
 						<a href="#harvesting" class="d-block mb-2 mobile-nav-link"><i class="bi bi-download"></i> Harvesting Guidelines</a>
@@ -146,7 +146,7 @@
 							<h6 class="mb-3 fw-bold">Navigation</h6>
 							<a href="#introduction"><i class="bi bi-info-circle"></i> Introduction</a>
 							<a href="#base-url"><i class="bi bi-link"></i> Base URL & Access</a>
-							<a href="#protocol"><i class="bi bi-cpu"></i> Protocol Implementation</a>
+							<a href="#protocol"><i class="bi bi-database-fill-gear"></i> Protocol Implementation</a>
 							<a href="#metadata"><i class="bi bi-database"></i> Metadata Formats</a>
 							<a href="#scope"><i class="bi bi-collection"></i> Record Scope</a>
 							<a href="#harvesting"><i class="bi bi-download"></i> Harvesting Guidelines</a>
