--- a/oai-pmh.html
+++ b/oai-pmh.html
@@ -39,7 +39,7 @@
 		</script>
 	</head>
 	<body>
-		<main class="page-wrapper">
+		<main class="page-wrapper" data-bs-spy="scroll" data-bs-target="#section-nav" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true">
 			<header class="header navbar navbar-expand-lg bg-light navbar-sticky py-0">
 				<div class="container px-3">
 					<a href="/" class="navbar-brand pe-3">
@@ -142,7 +142,7 @@
 			<div class="container py-4 py-lg-5">
 				<div class="row">
 					<div class="col-lg-3 d-none d-lg-block">
-						<div class="section-nav">
+						<div class="section-nav" id="section-nav">
 							<h6 class="mb-3 fw-bold">Navigation</h6>
 							<a href="#introduction"><i class="bi bi-info-circle"></i> Introduction</a>
 							<a href="#base-url"><i class="bi bi-link"></i> Base URL & Access</a>
@@ -848,7 +848,7 @@
 		<script src="/js/swiper.js"></script>
 		<script src="/js/js.js"></script>
 		<script>
-
+			document.querySelectorAll('.mobile-nav-link').forEach(function(link) { link.addEventListener('click', function() { document.querySelectorAll('.offcanvas.show').forEach(function(el) { const instance = bootstrap.Offcanvas.getInstance(el); if (instance) { instance.hide(); } }); }); });
 			document.addEventListener('DOMContentLoaded', function() {
 				document.getElementById('currentYear').textContent = new Date().getFullYear();
 				const copyApaBtn = document.getElementById('copyApaBtn');
