--- a/guidelines.html
+++ b/guidelines.html
@@ -46,7 +46,7 @@
 		</script>
 	</head>
 	<body>
-		<main class="page-wrapper">
+		<main class="page-wrapper" data-bs-spy="scroll" data-bs-target="#section-nav" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true">
 			<header class="header navbar navbar-expand-lg bg-light navbar-sticky py-0">
 				<div class="container px-3">
 					<a href="/" class="navbar-brand pe-3">
@@ -148,7 +148,7 @@
 				<div class="row">
 
 					<div class="col-lg-3 d-none d-lg-block">
-						<div class="section-nav">
+						<div class="section-nav" id="section-nav">
 							<h6 class="mb-3 fw-bold">Quick Navigation</h6>
 							<a href="#submission"><i class="bi bi-send-check"></i> Submission</a>
 							<a href="#preparation"><i class="bi bi-pencil-square"></i> Manuscript Preparation</a>
