--- a/a/s2025781116.html
+++ b/a/s2025781116.html
@@ -213,6 +213,7 @@
 										<li><a href="/about" class="dropdown-item">About the journal</a></li>
 										<li><a href="/about#editorialBoard" class="dropdown-item"><i class="bi bi-arrow-return-right"></i> Editorial Board</a></li>
 										<li><a href="/oai-pmh" class="dropdown-item">OAI-PMH Repository</a></li>
+										<li><a href="/faq" class="dropdown-item">Frequently Asked Questions</a></li>
 									</ul>
 								</li>
 							</ul>
