--- a/faq.html
+++ b/faq.html
@@ -28,7 +28,7 @@
 		<link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 		<link href="/css/swiper.css" rel="stylesheet">
-		<link href="/css/style.css?20260208" rel="stylesheet">
+		<link href="/css/style.css?20260208.2" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-RE3FS524EK"></script>
 		<script>
@@ -39,28 +39,6 @@
 		gtag('config', 'G-RE3FS524EK');
 		!function(){const e=localStorage.getItem("theme"),t=window.matchMedia("(prefers-color-scheme: dark)").matches?"dark":"light",a=e||t;document.documentElement.setAttribute("data-bs-theme",a)}();
 		</script>
-		<style>
-		.faq-question {
-  cursor: pointer;
-  user-select: none;
-}
-
-.transition-transform {
-  transition: transform 0.25s ease;
-}
-
-.search-match {
-  background-color: #fff3cd;
-  padding: 2px 4px;
-  border-radius: 3px;
-  color:#000
-}
-
-.related-questions {
-  border-left: 2px solid var(--bs-primary);
-}
-
-		</style>
 	</head>
 	<body>
 		<main class="page-wrapper" data-bs-spy="scroll" data-bs-target="#section-nav" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true">
