--- a/guidelines.html
+++ b/guidelines.html
@@ -64,7 +64,7 @@
 						<div class="offcanvas-body">
 							<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 								<li class="nav-item">
-									<a href="/aims-scope" class="nav-link">Aims &amp; Sope</a>
+									<a href="/aims-scope" class="nav-link">Aims &amp; Scope</a>
 								</li>
 								<li class="nav-item">
 									<a href="/guidelines" class="nav-link active">Guidelines</a>
