--- a/a/s2025781111.html
+++ b/a/s2025781111.html
@@ -208,7 +208,7 @@
 										<div class="d-lg-flex pt-lg-3">
 											<div class="mega-dropdown-column">
 												<ul class="list-unstyled mb-3">
-													<li><a href="/archive" class="dropdown-item">2(2026)</a></li>
+													<li><a href="/archive" class="dropdown-item">Volume 2(2026)</a></li>
 													<li><hr class="dropdown-divider"></li>
 													<li><a href="/authors" class="dropdown-item">Authors</a></li>
 												</ul>
