--- a/authors.html
+++ b/authors.html
@@ -76,7 +76,7 @@
 										<div class="d-lg-flex pt-lg-3">
 											<div class="mega-dropdown-column">
 												<ul class="list-unstyled mb-3">
-													<li><a href="/archive" class="dropdown-item">2(2026)</a></li>
+													<li><a href="/archive" class="dropdown-item">Volume 2(2026)</a></li>
 													<li><hr class="dropdown-divider"></li>
 													<li><a href="/authors" class="dropdown-item active">Authors</a></li>
 												</ul>
