--- a/faq.html
+++ b/faq.html
@@ -528,7 +528,7 @@
 						<li class="list-inline-item p-0 m-0 mb-1 ms-2">
 							<i class="bi bi-box-arrow-up-right me-1 text-primary"></i>
 							<a href="${l}" target="_blank" rel="noopener" class="link-primary">
-								${l.replace('https://solav.me/', '').replace('/', '').toUpperCase()}
+								${l.replace('https://solav.me', '').replace('/', '').toUpperCase()}
 							</a>
 						</li>
 					`).join(', ')}
